--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                 <i class="fa fa-star rating-color"></i>
                 <i class="fa fa-star"></i>
               </div>
-              <div class="row d-flex">
-                <div class="containers d-flex">
-                  <div class="row col-12 col-md-6">
+              <div class="container">
+                <div class="row">
+                  <div class="col-12 col-md-6">
                     <div
                       class="mt-5 d-flex justify-content-between align-items-center"
                     >
@@ -160,7 +160,7 @@
                     </div>
                   </div>
 
-                  <div class="row col-12 col-md-6">
+                  <div class="col-12 col-md-6">
                     <div
                       class="mt-5 d-flex justify-content-between align-items-center"
                     >
