--- a/mentions.html
+++ b/mentions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>HEBIB Abderahmane | MNS</title>
     <!-- Required meta tags -->
