--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta
+      name="description"
+      content="Portfolio de HEBIB Abderahmane - Développeur Web MNS. Découvrez mes projets, compétences et services."
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -25,6 +29,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
+    <link rel="preload" href="custom.css" as="style" />
     <link rel="stylesheet" href="custom.css" />
   </head>
 
@@ -89,11 +95,11 @@
               <h1>HEBIB Abderahmane</h1>
               <p>Développeur Web Junior</p>
               <p>
-                Diplômé du titre RNCP niveau 5 en Développement Web/Web
-                Mobile à l'IFA Metz Numeric School, je suis actuellement à la
-                recherche d'une alternance en tant que Développeur Full-Stack
-                afin de continuer à développer mes compétences et contribuer à
-                des projets concrets en entreprise.
+                Diplômé du titre RNCP niveau 5 en Développement Web/Web Mobile à
+                l'IFA Metz Numeric School, je suis actuellement à la recherche
+                d'une alternance en tant que Développeur Full-Stack afin de
+                continuer à développer mes compétences et contribuer à des
+                projets concrets en entreprise.
               </p>
 
               <h5 class="review-count mt-5 mb-3">Soft-Skills</h5>
