--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="fr">
   <head>
     <title>HEBIB Abderahmane | MNS</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -11,6 +10,12 @@
     <meta
       name="description"
       content="Portfolio de HEBIB Abderahmane - Développeur Web MNS. Découvrez mes projets, compétences et services."
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
     />
 
     <link
@@ -24,7 +29,6 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
