--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
 
     <link
+      rel="preload"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
@@ -27,6 +28,11 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      rel="preload"
+      href="https://unpkg.com/aos@next/dist/aos.css"
+      as="style"
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
@@ -556,8 +562,8 @@
                 <div class="col-12 col-md-3 mb-4">
                   <div class="card card-relief" data-aos="zoom-in">
                     <img
-                      src="https://dummyimage.com/1920x1080.gif"
-                      alt=""
+                      src="/img/dummy_1920x1080_optimized.webp"
+                      alt="aperçu projet"
                       class="img-fluid"
                       loading="lazy"
                     />
@@ -571,8 +577,8 @@
                 <div class="col-12 col-md-3 mb-4">
                   <div class="card card-relief" data-aos="zoom-in">
                     <img
-                      src="https://dummyimage.com/1920x1080.gif"
-                      alt=""
+                      src="/img/dummy_1920x1080_optimized.webp"
+                      alt="aperçu projet"
                       class="img-fluid"
                       loading="lazy"
                     />
@@ -586,8 +592,8 @@
                 <div class="col-12 col-md-3 mb-4">
                   <div class="card card-relief" data-aos="zoom-in">
                     <img
-                      src="https://dummyimage.com/1920x1080.gif"
-                      alt=""
+                      src="/img/dummy_1920x1080_optimized.webp"
+                      alt="aperçu projet"
                       class="img-fluid"
                       loading="lazy"
                     />
@@ -690,14 +696,16 @@
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
+      defer
     ></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
+      defer
     ></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
     <script>
       AOS.init();
     </script>
