--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <title>HEBIB Abderahmane | MNS</title>
     <meta charset="utf-8" />
+    <title>HEBIB Abderahmane | MNS</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -11,6 +11,7 @@
       name="description"
       content="Portfolio de HEBIB Abderahmane - Développeur Web MNS. Découvrez mes projets, compétences et services."
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,34 +20,27 @@
     />
 
     <link
-      rel="preload"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link
-      rel="preload"
-      href="https://unpkg.com/aos@next/dist/aos.css"
-      as="style"
-    />
+
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <link rel="preload" href="custom.css" as="style" />
     <link rel="stylesheet" href="custom.css" />
-    <link
-      rel="preload"
-      href="./img/IMG_1015-removebg-preview.webp"
-      as="image"
-    />
+
+    <link rel="preload" href="./img/Abd.webp" as="image" type="image/webp" />
   </head>
 
   <body>
@@ -706,8 +700,10 @@
       defer
     ></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
-    <script>
-      AOS.init();
-    </script>
+    <script
+      src="https://unpkg.com/aos@next/dist/aos.js"
+      defer
+      onload="AOS.init();"
+    ></script>
   </body>
 </html>
